--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul class="menu">
           <li><a href="#presentation">What's Synapse</a></li>
           <li><a href="#deliver"> What we deliver</a></li>
-          <li><a href="#clients">For who ?</a></li>
+          <li><a href="#serve">For who ?</a></li>
           <li><a href="#team">Our team</a></li>
         </ul>
       </nav>
