Update new version index.html

--- a/index.html
+++ b/index.html
@@ -1,143 +1,304 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>synapse ai</title>
-  <meta name="description" content="synapse ai digital solutions" />
-  <link rel="icon" href="../img/favicon.svg" type="image/svg+xml" />
-  <link rel="stylesheet" href="../css/styles.css" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Synapse AI — Connecting minds, saving lives</title>
+  <meta name="description" content="Synapse AI — digital healthcare solutions bridging patients, doctors, and hospitals.">
+  <link rel="icon" href="/img/logo.png" type="image/png">
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body id="top">
-  <a class="skip-link" href="#contenu">Aller au contenu principal</a>
 
-  <!-- En-tête / Navigation -->
-  <header class="site-header" role="banner">
-    <div class="container header__inner">
-      <a class="brand" href="#top" aria-label="Accueil synapse ai">
-        <img src="../img/logo.png" alt="Logo synapse ai " width="120" height="120" />
+  <header class="site-header header--glass">
+    <div class="container header-inner">
+      <a class="brand" href="#top" aria-label="Accueil Synapse AI">
+        <img src="/img/logoSimple.png" alt="Logo Synapse AI" width="200" height="120">
       </a>
+
       <nav class="site-nav" aria-label="Navigation principale">
         <ul class="menu">
-          <li><a href="#presentation">What's Synapse</a></li>
-          <li><a href="#deliver"> What we deliver</a></li>
-          <li><a href="#serve">For who ?</a></li>
-          <li><a href="#team">Our team</a></li>
+          <li><a href="#services">Our Services</a></li>
+          <li><a href="#contact">Contact Us</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <main id="contenu">
-    <!-- One‑liner / Hero -->
-    <section id="intro" class="section section--alt hero hero--mesh" aria-labelledby="intro-title">
-  <div class="container">
-    <h1 id="intro-title">Connecting minds, saving lives</h1>
-    <p class="lead">Let’s revolutionize healthcare</p>
+  <section id="intro" class="section section--alt hero hero--mesh" aria-labelledby="intro-title">
+        <div class="container ">
+          <h1 id="intro-title">Connecting minds, saving lives</h1>
+          <p class="lead">
+            Lebanon’s leading digital healthcare startup is using advanced digital solutions to bridge the gap
+            between patients, doctors, and hospitals.
+          </p>
+        </div>
+  </section>
+  <main id="main">    
+
+    <!-- About us -->
+<section id="about" class="section about" aria-labelledby="about-title">
+  <div class="container about-grid">
+    <div class="about-text">
+      <h2 id="about-title">About Us</h2>
+      <p>
+        Synapse AI is a Lebanese digital healthcare company where doctors and healthcare developers
+        join forces to transform the future of medicine. By combining clinical expertise with cutting-edge
+        digital innovation, we deliver solutions that make healthcare smarter, faster, and more accessible.
+      </p>
+      <p>
+        Our team’s unique mix of medical insight and technical talent allows us to design platforms that
+        truly serve both patients and providers—from optimizing hospital workflows and ensuring
+        medication availability to empowering doctors with actionable data.
+      </p>
+      <p>
+        At Synapse AI, we don’t just build technology. We create digital healthcare experiences that save
+        time, reduce costs, and improve lives.
+      </p>
+    </div>
+    <div class="about-img">
+      <img src="/img/logoComplet.png" alt="Synapse AI Logo">
+    </div>
   </div>
 </section>
 
 
-    <!-- Presentation -->
-    <section id="presentation" class="section" aria-labelledby="presentation-title">
-      <div class="container">
-        <h2 id="presentation-title">What's Synapse ?</h2>
-        <p>Synapse is a digital health company offering innovative digital services for healthcare. We design simple, secure, and interoperable tools that enhance team collaboration and speed up clinical decisions for caregivers and patients.</p>
+   <!-- Mission -->
+<section id="mission" class="section mission" aria-labelledby="mission-title">
+  <div class="container mission-grid">
+    <div class="mission-img">
+      <img src="/img/LebMap.png" alt="Lebanon map">
+    </div>
+    <div class="mission-text">
+      <h2 id="mission-title">Our Mission</h2>
+      <p>
+        To revolutionize healthcare in Lebanon and the region by delivering advanced digital solutions
+        that make care smarter, faster, and personal. We bridge the gap between technology and
+        medicine, empowering doctors, hospitals, and patients to thrive in a connected world.
+      </p>
+    </div>
+  </div>
+</section>
+
+
+   <!-- Vision -->
+<section id="vision" class="section vision" aria-labelledby="vision-title">
+  <div class="container vision-grid">
+    <div class="vision-text">
+      <h2 id="vision-title">Our Vision</h2>
+      <p>
+        To become the leading digital healthcare platform in Lebanon and the Middle East, setting the
+        gold standard for innovation in healthcare. We envision a future where every hospital is smarter,
+        every doctor is empowered, and every patient has access to world-class care—powered by
+        intelligent digital solutions.
+      </p>
+    </div>
+    <div class="vision-img">
+      <img src="/img/Vision.png" alt="Vision at Synapse AI">
+    </div>
+  </div>
+</section>
+
+
+    <!-- Values -->
+<section id="values" class="section" aria-labelledby="values-title">
+  <div class="container">
+    <h2 id="values-title">Our Values</h2>
+
+    <div class="value-item">
+      <div class="value-img">
+        <img src="/img/Innovation.png" alt="Innovation">
       </div>
-    </section>
-
-
-
-    <!-- What we deliver -->
-    <section id="deliver" class="section" aria-labelledby="deliver-title">
-      <div class="container">
-        <h2 id="deliver-title">What we deliver</h2>
-        <ul class="feature-list">
-          <li><strong>Structured tele-expertise networks:</strong> clear workflows, auditable history, role-based access.</li>
-          <li><strong>Security &amp; compliance:</strong> privacy by design, consent management, healthcare-grade hosting, RGPD alignment.</li>
-          <li><strong>Explainable AI triage:</strong> transparent criteria, human-in-the-loop, measurable impact on time-to-decision.</li>
-        </ul>
+      <div class="value-text">
+        <h3>Innovation</h3>
+        <p>We don’t follow trends, we set them. Our team pioneers next-generation healthcare technologies that redefine what’s possible.</p>
       </div>
-    </section>
+    </div>
 
-    <!-- Who we serve -->
-    <section id="serve" class="section section--alt" aria-labelledby="serve-title">
-      <div class="container">
-        <h2 id="serve-title">Who we serve ?</h2>
-        <ul class="audience-list">
-          <li>University hospitals</li>
-          <li>Private clinic groups</li>
-          <li>Mission-driven NGOs</li>
-          <li>National/Regional health programs</li>
-        </ul>
+    <div class="value-item reverse">
+      <div class="value-text">
+        <h3>Patient-Centric</h3>
+        <p>Every product, every solution, every line of code serves one purpose: improving the patient journey and creating better health outcomes.</p>
       </div>
-    </section>
+      <div class="value-img">
+        <img src="/img/Patiente-centric.png" alt="Patient Centric">
+      </div>
+    </div>
 
-    <!-- Our Team -->
-    <section id="team" class="section" aria-labelledby="team-title">
+    <div class="value-item">
+      <div class="value-img">
+        <img src="/img/collaboration.png" alt="Collaboration">
+      </div>
+      <div class="value-text">
+        <h3>Collaboration</h3>
+        <p>We bring together doctors, developers, and hospitals to co-create solutions that work in real life, not just on paper.</p>
+      </div>
+    </div>
+
+    <div class="value-item reverse">
+      <div class="value-text">
+        <h3>Integrity</h3>
+        <p>We build trust through transparency, ethics, and data security, because healthcare deserves nothing less.</p>
+      </div>
+      <div class="value-img">
+        <img src="/img/integrity.png" alt="Integrity">
+      </div>
+    </div>
+
+    <div class="value-item">
+      <div class="value-img">
+        <img src="/img/Resilience.png" alt="Resilience">
+      </div>
+      <div class="value-text">
+        <h3>Resilience</h3>
+        <p>Born in Lebanon, we know how to innovate under pressure. Our solutions are built to withstand crises and keep healthcare moving forward.</p>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+    <!-- Services -->
+    <section id="services" class="section" aria-labelledby="services-title">
       <div class="container">
-        <h2 id="team-title"> Our Team </h2>
-        <div class="team-grid">
-          <article id="president" class="card-person" itemscope itemtype="https://schema.org/Person">
-            <h3 class="person__name" itemprop="name">Dr. Jihad Youssef</h3>
-            <p class="profile"> <img src="../img/profile1.png"></p>
-            <p class="person__role" itemprop="jobTitle">President — Intensive Care &amp; Critical Care</p>
-            <p class="person__bio">Founder and clinical strategy lead; drives product vision for safe, high‑impact tele‑collaboration.</p>
+        <h2 id="services-title">Services</h2>
+        <div class="services-grid">
+          <article class="card-service" id="his-emr">
+            <h3 class="service-name">HIS &amp; EMR Systems</h3>
+            <img class="service-avatar" src="/img/hs.png" alt="" width="96" height="96" loading="lazy">
+            <ul class="service-description">
+              <li>Unify your hospital operations with a single, secure platform.</li>
+              <li>Access patient records instantly, streamline workflows, and make smarter decisions faster.</li>
+              <li>Safe, compliant, and effortless care coordination at your fingertips.</li>
+            </ul>
           </article>
 
-          <article id="legal" class="card-person" itemscope itemtype="https://schema.org/Person">
-            <h3 class="person__name" itemprop="name">Legal Counsel</h3>
-            <p class="profile"> <img src="../img/profile2.png"></p>
-            <p class="person__role" itemprop="jobTitle">Health law &amp; data protection (RGPD/HDS)</p>
-            <p class="person__bio">Contracts, governance, compliance.</p>
+          <article class="card-service" id="custom-websites">
+            <h3 class="service-name">Custom Healthcare Websites</h3>
+            <img class="service-avatar" src="/img/websites.png" alt="" width="96" height="96" loading="lazy">
+            <p>We design secure, responsive, and user‑friendly websites for hospitals, clinics, and doctors. Each site is tailored to showcase your services, specialties, and patient resources, while reflecting your brand’s professionalism and credibility.</p>
           </article>
 
-          <article id="marketing" class="card-person" itemscope itemtype="https://schema.org/Person">
-            <h3 class="person__name" itemprop="name">Marketing &amp; Communications</h3>
-            <p class="profile"> <img src="../img/profile3.png"></p>
-            <p class="person__role" itemprop="jobTitle">Brand, positioning, partnerships, digital acquisition</p>
-            <p class="person__bio">Driving visibility and reputation across national and international scenes.</p>
+          <article class="card-service" id="telemedicine">
+            <h3 class="service-name">Telemedicine Platforms</h3>
+            <img class="service-avatar" src="/img/medicalPlatform.png" alt="" width="96" height="96" loading="lazy">
+            <p>Launch full‑featured web‑based teleconsultation solutions. Enable video consultations, secure chat, and e‑prescriptions to expand access to care, connect specialists, and enhance patient experience.</p>
           </article>
 
-          <article id="operations" class="card-person" itemscope itemtype="https://schema.org/Person">
-            <h3 class="person__name" itemprop="name">Operations &amp; Program Management</h3>
-            <p class="profile"> <img src="../img/profile.png"></p>
-            <p class="person__role" itemprop="jobTitle">Deployments, hospital relations, quality &amp; safety</p>
-            <p class="person__bio">Orchestrating rollouts and ensuring operational excellence.</p>
+          <article class="card-service" id="data-analytics">
+            <h3 class="service-name">Data &amp; Analytics Dashboards</h3>
+            <img class="service-avatar" src="/img/data.png" alt="" width="96" height="96" loading="lazy">
+            <p>Turn hospital data into actionable insights. Our custom dashboards provide real‑time metrics, reports, and patient outcome tracking to help management make informed, strategic decisions.</p>
+          </article>
+
+          <article class="card-service" id="training-elearning">
+            <h3 class="service-name">Staff Training &amp; eLearning Platforms</h3>
+            <img class="service-avatar" src="/img/training.png" alt="" width="96" height="96" loading="lazy">
+            <p>Train staff efficiently with digital courses, certifications, and compliance programs. Keep your team updated on best practices, medical protocols, and new technologies.</p>
           </article>
         </div>
       </div>
     </section>
 
-  
+    <!-- Privacy & Security -->
+<section id="privacy-security" class="section privacy" aria-labelledby="privacy-title">
+  <div class="container">
+    <div class="privacy-card">
+      <h2 id="privacy-title">Privacy &amp; Security</h2>
+      <p>At Synapse AI, protecting patient data is non-negotiable. We apply international standards while aligning with Lebanon’s healthcare regulations.</p>
+      <ul class="checklist">
+        <li><strong>Confidentiality:</strong> Patient records are strictly private, accessed only by authorized professionals.</li>
+        <li><strong>Protection:</strong> All data is encrypted, monitored, and secured with role-based access.</li>
+        <li><strong>Responsible AI:</strong> Our algorithms are designed with privacy safeguards and fairness checks.</li>
+        <li><strong>Transparency:</strong> No hidden sharing—patients and partners know how data is used.</li>
+      </ul>
+      
+    </div>
+    <p class="privacy-quote">
+      “With Synapse, confidentiality isn’t just a policy; it’s our promise.”
+    </p>
+  </div>
+</section>
+
+
+<!-- Partners -->
+<section id="partners" class="section partners" aria-labelledby="partners-title">
+  <div class="container">
+    <h2 id="partners-title">Partners</h2>
+    <p>Synapse works with international healthcare leaders and technology innovators to bring smarter, safer care to patients.</p>
+
+    <ul class="partners-list">
+      <li>
+        <a href="https://ehealth-pro.com/fr/home" target="_blank" rel="noopener">
+          <img src="/img/IMEAH.png" alt="imeah" width="300" height="200" loading="lazy">
+        </a>
+      </li>
+      <li>
+        <span>ELITE Healthcare Solutions</span>
+      </li>
+    </ul>
+
+    <p class="privacy-quote" id="partners-style">Together, we’re transforming healthcare across borders.</p>
+  </div>
+</section>
+
+    <!-- Contact -->
+    <section id="contact" class="section" aria-labelledby="contact-title">
+  <div class="container">
+    <h2 id="contact-title">Contact us</h2>
+
+    <address class="contact-block">
+      <p><strong>Address:</strong> Synapse AI, Blvd Bechara el Koury - Facing Serail - Bakri Center - 8th floor, Tripoli, Lebanon </p>
+      <p><strong>Email:</strong> <a href="mailto:info@synapse.ai">info@synapse.ai</a></p>
+    </address>
+
+    <!-- Map component -->
+    <div class="map"
+         data-lat="34.433547971613784"
+         data-lng="35.835979271167844"
+         data-label="Synapse AI, Blvd Bechara el Koury - Facing Serail - Bakri Center - 8th floor, Tripoli, Lebanon">
+      <a class="map__fallback"
+         href="https://www.google.com/maps?q=34.433547971613784,35.835979271167844"
+         target="_blank" rel="noopener">
+        Open in Google Maps
+      </a>
+      <iframe
+        title="Synapse AI location on map"
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+        allowfullscreen>
+      </iframe>
+      <button type="button" class="map__overlay" aria-label="Open in Google Maps"></button>
+    </div>
+  </div>
+</section>
+
   </main>
 
- <footer class="site-footer" role="contentinfo">
-  <div class="container footer__inner">
-    <div class="footer__brand">
-      <img src="../img/logo.png" alt="Logo Synapse AI" width="44" height="44">
-      <div class="footer__meta">
-        <strong class="footer__name">Synapse AI</strong>
-        <span class="footer__slogan">Connecting minds, saving lives</span>
+  <footer class="site-footer">
+    <div class="container footer-inner">
+      <div class="footer-brand">
+        <img src="/img/logo.png" alt="Logo Synapse AI" width="44" height="44">
+        <div class="footer-meta">
+          <strong class="footer-name">Synapse AI</strong>
+          <span class="footer-slogan">Connecting minds, saving lives</span>
+        </div>
       </div>
+
+      <nav class="footer-nav" aria-label="Liens légaux">
+        <a href="#">Mentions légales</a>
+        <span aria-hidden="true">•</span>
+        <a href="#">CGU</a>
+        <span aria-hidden="true">•</span>
+        <a href="#">Confidentialité</a>
+      </nav>
     </div>
 
-    <nav class="footer__nav" aria-label="Liens légaux">
-      <a href="#">Mentions légales</a>
-      <span aria-hidden="true">•</span>
-      <a href="#">CGU</a>
-      <span aria-hidden="true">•</span>
-      <a href="#">Confidentialité</a>
-    </nav>
+    <div class="container footer-bottom">
+    <small>© <span id="year">2025</span> Synapse AI. All rights reserved.</small>
   </div>
+  </footer>
 
-  <div class="container footer__bottom">
-    <small>© <span id="year">2025</span> synapse ai liban. Tous droits réservés.</small>
-  </div>
-</footer>
-
-
-  <!-- JS externe uniquement -->
-  <script defer src="../js/app.js"></script>
+  <script defer src="/js/app.js"></script>
 </body>
 </html>
