--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Logo -->
     <a class="brand" href="#top">
-      <img src="/img/logoSimple.png" alt="Synapse AI" class="logo" width="200" height="60">
+      <img src="/img/logoSimple.png" alt="Synapse AI" class="logo" width="200px" height="60px">
     </a>
 
     <!-- Menu principal -->
