--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Synapse AI — Connecting minds, saving lives</title>
+  <title>Synapse AI</title>
   <meta name="description" content="Synapse AI — digital healthcare solutions bridging patients, doctors, and hospitals.">
   <link rel="icon" href="/img/logo.png" type="image/png">
   <link rel="stylesheet" href="/css/styles.css">
@@ -31,29 +31,28 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-
-    <!-- Burger (mobile only) -->
-    <button class="burger" aria-label="Menu">&#9776;</button>
   </div>
   </header>
 
   <section id="intro" class="section section--alt hero hero--mesh" aria-labelledby="intro-title">
-        <div class="container ">
-          <h1 id="intro-title">Connecting minds, saving lives</h1>
-          <p class="lead">
-            Lebanon’s leading digital healthcare company is redefining healthcare by seamlessly connecting patients, doctors, and hospitals through digital innovation..
-          </p>
-          <div class="hero-buttons">
-            <a href="#services" class="btn btn-primary">Our Services</a>
-            <a href="#contact" class="btn btn-secondary">Contact Us</a>
-          </div>
-        </div>
+    <div class="container">
+      <h1 id="intro-title" class="fade-in">Connecting minds, saving lives</h1>
+      <p class="lead fade-in">
+        Lebanon’s leading digital healthcare company is redefining healthcare by seamlessly connecting patients, doctors, and hospitals through digital innovation..
+      </p>
+      <div class="hero-buttons fade-in">
+        <a href="#services" class="btn btn-primary">Our Services</a>
+        <a href="#contact" class="btn btn-secondary">Contact Us</a>
+      </div>
+    </div>
   </section>
+
+
   <main id="main">    
 
     <!-- About us -->
 <section id="about" class="section about" aria-labelledby="about-title">
-  <div class="container about-grid">
+  <div class="container about-grid reveal">
     <div class="about-text">
       <h2 id="about-title">About Us</h2>
       <p>
@@ -80,7 +79,7 @@
 
    <!-- Mission -->
 <section id="mission" class="section mission" aria-labelledby="mission-title">
-  <div class="container mission-grid">
+  <div class="container mission-grid reveal">
     <div class="mission-img">
       <img src="/img/LebMap.png" alt="Lebanon map">
     </div>
@@ -98,7 +97,7 @@
 
    <!-- Vision -->
 <section id="vision" class="section vision" aria-labelledby="vision-title">
-  <div class="container vision-grid">
+  <div class="container vision-grid reveal">
     <div class="vision-text">
       <h2 id="vision-title">Our Vision</h2>
       <p>
@@ -220,7 +219,7 @@
     <!-- Privacy & Security -->
 <section id="privacy-security" class="section privacy" aria-labelledby="privacy-title">
   <div class="container">
-    <div class="privacy-card">
+    <div class="privacy-card reveal-privacy">
       <h2 id="privacy-title">Privacy &amp; Security</h2>
       <p>At Synapse AI, protecting patient data is non-negotiable. We apply international standards while aligning with Lebanon’s healthcare regulations.</p>
       <ul class="checklist">
@@ -231,7 +230,7 @@
       </ul>
       
     </div>
-    <p class="privacy-quote">
+    <p class="privacy-quote reveal-privacy">
       With Synapse, confidentiality isn’t just a policy; it’s our promise.
     </p>
   </div>
@@ -241,23 +240,23 @@
 <!-- Partners -->
 <section id="partners" class="section partners" aria-labelledby="partners-title">
   <div class="container">
-    <h2 id="partners-title">Partners</h2>
-    <p>Synapse works with international healthcare leaders and technology innovators to bring smarter, safer care to patients.</p>
+    <h2 id="partners-title" class="reveal-partners">Partners</h2>
+    <p class="reveal-partners">Synapse works with international healthcare leaders and technology innovators to bring smarter, safer care to patients.</p>
 
     <ul class="partners-list partners-list--wall">
-      <li class="partner">
+      <li class="partner reveal-partner-item">
         <a href="https://ehealth-pro.com/fr/home" target="_blank" rel="noopener">
           <img src="/img/IMEAH.png" alt="IMEAH" id="imeahLogo">
         </a>
       </li>
 
-      <li class="partner">
+      <li class="partner reveal-partner-item">
         <span class="partner-fallback">ELITE Healthcare Solutions</span>
       </li>
 
     </ul>
 
-    <p class="partners-quote">Together, we’re transforming healthcare across borders.</p>    
+    <p class="partners-quote reveal-partners">Together, we’re transforming healthcare across borders.</p>    
   </div>
 </section>
 
