--- a/index.html
+++ b/index.html
@@ -31,6 +31,28 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
+    <!-- LANG SWITCHER (EN page) -->
+<div class="langy" data-component="langy">
+  <button class="langy__btn" id="langyBtn" aria-haspopup="listbox" aria-expanded="false" aria-label="Language menu">
+    <span class="flag flag--gb" id="langyFlag" aria-hidden="true"></span>
+  </button>
+
+  <ul class="langy__menu" id="langyMenu" role="listbox" tabindex="-1" aria-label="Choose language">
+    <li class="langy__item" role="option" data-code="en" data-href="/" aria-selected="false">
+      <span class="flag flag--gb" aria-hidden="true"></span>
+      <span class="langy__label">English</span>
+    </li>
+    <li class="langy__item" role="option" data-code="fr" data-href="/fr/" aria-selected="false">
+      <span class="flag flag--fr" aria-hidden="true"></span>
+      <span class="langy__label">Français</span>
+    </li>
+    <li class="langy__item" role="option" data-code="ar" data-href="/ar/" aria-selected="false">
+      <span class="flag flag--lb" aria-hidden="true"></span>
+      <span class="langy__label">العربية</span>
+    </li>
+  </ul>
+</div>
+
   </div>
   </header>
 
