--- a/fr/index.html
+++ b/fr/index.html
@@ -12,6 +12,7 @@
   <link rel="alternate" href="https://synapse-ai.org/ar/" hreflang="ar">
 
 </head>
+
 <body id="top">
 
   <header class="site-header header--glass">
@@ -199,48 +200,50 @@
     </section>
 
     <!-- Services -->
-    <section id="services" class="section" aria-labelledby="services-title">
-      <div class="container">
-        <h2 id="services-title">Services</h2>
-        <div class="services-grid">
+   <section id="services" class="section" aria-labelledby="services-title">
+  <div class="container">
+    <h2 id="services-title">Services</h2>
+    <div class="services-grid">
 
-          <article class="card-service" id="his-emr">
-            <img class="service-avatar" src="/img/hs.png" alt="" width="96" height="96" loading="lazy">
-            <h3 class="service-name">Systèmes HIS &amp; DME</h3>
-            <ul class="service-description">
-              <li>Unifiez vos opérations hospitalières sur une plateforme unique et sécurisée.</li>
-              <li>Accédez instantanément aux dossiers patients, fluidifiez les parcours, et décidez plus vite.</li>
-              <li>Coordination des soins simple, conforme et sécurisée à portée de main.</li>
-            </ul>
-          </article>
+      <article class="card-service" id="his-emr">
+        <img class="service-avatar" src="/img/hs.png" alt="" width="96" height="96" loading="lazy" decoding="async">
+        <h3 class="service-name">Systèmes SIH &amp; DME (HIS &amp; EMR)</h3>
+        <ul class="service-description">
+          <li>Rationalisez les opérations de votre hôpital via une plateforme unique et sécurisée.</li>
+          <li>Accédez instantanément aux dossiers patients, optimisez les workflows et prenez des décisions plus rapides et éclairées.</li>
+          <li>Assurez une coordination des soins sûre, conforme et fluide, à portée de main.</li>
+        </ul>
+      </article>
 
-          <article class="card-service" id="custom-websites">
-            <img class="service-avatar" src="/img/websites.png" alt="" width="96" height="96" loading="lazy">
-            <h3 class="service-name">Sites web santé sur mesure</h3>
-            <p>Nous concevons des sites sécurisés, responsives et simples à utiliser pour hôpitaux, cliniques et médecins. Chaque site met en valeur vos services, spécialités et ressources patients, tout en reflétant le professionnalisme de votre marque.</p>
-          </article>
+      <article class="card-service" id="custom-websites">
+        <img class="service-avatar" src="/img/websites.png" alt="" width="96" height="96" loading="lazy" decoding="async">
+        <h3 class="service-name">Sites web santé sur mesure</h3>
+        <p>Renforcez votre présence en ligne avec des sites sécurisés, réactifs et faciles d’utilisation. Mettez en valeur vos services, vos spécialités et vos ressources patient tout en reflétant le professionnalisme et la crédibilité de votre marque.</p>
+      </article>
 
-          <article class="card-service" id="telemedicine">
-            <img class="service-avatar" src="/img/medicalPlatform.png" alt="" width="96" height="96" loading="lazy">
-            <h3 class="service-name">Plateformes de télémédecine</h3>
-            <p>Lancez des solutions web complètes de téléconsultation. Activez la visio, la messagerie sécurisée et l’e-prescription pour étendre l’accès aux soins et améliorer l’expérience patient.</p>
-          </article>
+      <article class="card-service" id="telemedicine">
+        <img class="service-avatar" src="/img/medicalPlatform.png" alt="" width="96" height="96" loading="lazy" decoding="async">
+        <h3 class="service-name">Plateformes de télémédecine</h3>
+        <p>Développez votre prise en charge avec des solutions web complètes de téléconsultation. Activez les visioconsultations, la messagerie sécurisée et les ordonnances électroniques pour connecter les spécialistes et améliorer l’expérience patient.</p>
+      </article>
 
-          <article class="card-service" id="data-analytics">
-            <img class="service-avatar" src="/img/data.png" alt="" width="96" height="96" loading="lazy">
-            <h3 class="service-name">Données &amp; tableaux de bord</h3>
-            <p>Transformez vos données hospitalières en décisions actionnables. Nos tableaux de bord offrent des métriques en temps réel, des rapports et un suivi des résultats pour guider la stratégie.</p>
-          </article>
+      <article class="card-service" id="data-analytics">
+        <img class="service-avatar" src="/img/data.png" alt="" width="96" height="96" loading="lazy" decoding="async">
+        <h3 class="service-name">Données &amp; tableaux de bord analytiques</h3>
+        <p>Transformez vos données hospitalières en informations exploitables. Suivez des indicateurs en temps réel, générez des rapports détaillés et surveillez les résultats pour prendre des décisions stratégiques éclairées.</p>
+      </article>
 
-          <article class="card-service" id="training-elearning">
-            <img class="service-avatar" src="/img/training.png" alt="" width="96" height="96" loading="lazy">
-            <h3 class="service-name">Formation &amp; e-learning</h3>
-            <p>Formez vos équipes via des parcours digitaux, certifications et programmes de conformité. Gardez vos professionnels à jour sur les bonnes pratiques, protocoles et nouvelles technologies.</p>
-          </article>
+      <article class="card-service" id="training-elearning">
+        <img class="service-avatar" src="/img/training.png" alt="" width="96" height="96" loading="lazy" decoding="async">
+        <h3 class="service-name">Formation du personnel &amp; e-learning</h3>
+        <p>Offrez à vos équipes des parcours de formation numériques, des certifications et des programmes de conformité. Maintenez-les à jour sur les bonnes pratiques, les protocoles médicaux et les technologies émergentes pour une qualité de soins élevée.</p>
+      </article>
 
-        </div>
-      </div>
-    </section>
+    </div>
+  </div>
+</section>
+
+
 
     <!-- Confidentialité & Sécurité -->
     <section id="privacy-security" class="section privacy" aria-labelledby="privacy-title">
