--- a/ar/index.html
+++ b/ar/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" href="/img/logo.png" type="image/png">
   <link rel="stylesheet" href="/css/styles.css">
 </head>
+
 <body id="top">
 
   <header class="site-header header--glass">
@@ -191,48 +192,49 @@
     </section>
 
     <!-- الخدمات -->
-    <section id="services" class="section" aria-labelledby="services-title">
-      <div class="container">
-        <h2 id="services-title">الخدمات</h2>
-        <div class="services-grid">
+    <section id="services" class="section" aria-labelledby="services-title" lang="ar" dir="rtl">
+  <div class="container">
+    <h2 id="services-title">الخدمات</h2>
+    <div class="services-grid">
 
-          <article class="card-service" id="his-emr">
-            <img class="service-avatar" src="/img/hs.png" alt="" width="96" height="96" loading="lazy">
-            <h3 class="service-name">أنظمة HIS &amp; EMR</h3>
-            <ul class="service-description">
-              <li>توحيد عمليات المستشفى على منصة واحدة آمنة.</li>
-              <li>وصول فوري لملفات المرضى، تدفقات عمل أكثر سلاسة، وقرارات أسرع وأدق.</li>
-              <li>تنسيق رعاية سهل، متوافق وآمن—في متناول يدك.</li>
-            </ul>
-          </article>
+      <article class="card-service" id="his-emr">
+        <img class="service-avatar" src="/img/hs.png" alt="" width="96" height="96" loading="lazy" decoding="async">
+        <h3 class="service-name">أنظمة معلومات المستشفيات والسجلات الطبية الإلكترونية (HIS &amp; EMR)</h3>
+        <ul class="service-description">
+          <li>بسّط عمليات المستشفى عبر منصّة واحدة وآمنة.</li>
+          <li>وصول فوري إلى سجلات المرضى، وتحسين سير العمل، واتخاذ قرارات أسرع وأكثر ذكاءً.</li>
+          <li>تنسيق رعاية آمن ومتوافق وسلس في متناول يدك.</li>
+        </ul>
+      </article>
 
-          <article class="card-service" id="custom-websites">
-            <img class="service-avatar" src="/img/websites.png" alt="" width="96" height="96" loading="lazy">
-            <h3 class="service-name">مواقع صحية مخصّصة</h3>
-            <p>نصمّم مواقع آمنة وسريعة الاستجابة وسهلة الاستخدام للمستشفيات والعيادات والأطباء—تعكس مهنيتكم وتعرض خدماتكم وتُسهل موارد المرضى.</p>
-          </article>
+      <article class="card-service" id="custom-websites">
+        <img class="service-avatar" src="/img/websites.png" alt="" width="96" height="96" loading="lazy" decoding="async">
+        <h3 class="service-name">مواقع رعاية صحية مخصّصة</h3>
+        <p>ارتقِ بحضورك الرقمي عبر مواقع آمنة ومتجاوبة وسهلة الاستخدام. اعرض خدماتك وتخصّصاتك وموارد المرضى مع إبراز احترافية علامتك ومصداقيتها.</p>
+      </article>
 
-          <article class="card-service" id="telemedicine">
-            <img class="service-avatar" src="/img/medicalPlatform.png" alt="" width="96" height="96" loading="lazy">
-            <h3 class="service-name">منصّات التطبيب عن بُعد</h3>
-            <p>أطلق حلول استشارة عبر الويب متكاملة: مكالمات فيديو، دردشة آمنة، ووصفات إلكترونية—لتوسيع الوصول للرعاية وتحسين تجربة المريض.</p>
-          </article>
+      <article class="card-service" id="telemedicine">
+        <img class="service-avatar" src="/img/medicalPlatform.png" alt="" width="96" height="96" loading="lazy" decoding="async">
+        <h3 class="service-name">منصّات التطبيب عن بُعد</h3>
+        <p>وسّع نطاق الرعاية من خلال حلول استشارة طبية عبر الويب متكاملة الميزات. فعّل الاستشارات المرئية، والمراسلة الآمنة، والوصفات الإلكترونية لربط الاختصاصيين وتعزيز تجربة المريض.</p>
+      </article>
 
-          <article class="card-service" id="data-analytics">
-            <img class="service-avatar" src="/img/data.png" alt="" width="96" height="96" loading="lazy">
-            <h3 class="service-name">البيانات ولوحات التحليلات</h3>
-            <p>حوّل بيانات المستشفى إلى قرارات قابلة للتنفيذ عبر لوحات تعرض مؤشرات لحظية وتقارير ومتابعة نتائج المرضى لدعم القرار الإداري.</p>
-          </article>
+      <article class="card-service" id="data-analytics">
+        <img class="service-avatar" src="/img/data.png" alt="" width="96" height="96" loading="lazy" decoding="async">
+        <h3 class="service-name">البيانات ولوحات المؤشرات التحليلية</h3>
+        <p>حوِّل بيانات المستشفى إلى رؤى قابلة للتنفيذ. تتبّع المؤشرات لحظيًا، وأنشئ تقارير مفصّلة، وراقب نتائج المرضى لاتخاذ قرارات استراتيجية مبنية على البيانات.</p>
+      </article>
 
-          <article class="card-service" id="training-elearning">
-            <img class="service-avatar" src="/img/training.png" alt="" width="96" height="96" loading="lazy">
-            <h3 class="service-name">تدريب الكوادر والتعليم الإلكتروني</h3>
-            <p>درّب فريقك بكفاءة عبر مسارات رقمية وشهادات وبرامج امتثال—ليبقوا على اطّلاع بأفضل الممارسات والبروتوكولات والتقنيات الجديدة.</p>
-          </article>
+      <article class="card-service" id="training-elearning">
+        <img class="service-avatar" src="/img/training.png" alt="" width="96" height="96" loading="lazy" decoding="async">
+        <h3 class="service-name">تدريب الكوادر ومنصّات التعلّم الإلكتروني</h3>
+        <p>مكّن كوادرَك عبر دورات رقمية وشهادات وبرامج امتثال. أبقِ فريقك مطّلعًا على أفضل الممارسات والبروتوكولات الطبية والتقنيات الناشئة لضمان رعاية عالية الجودة.</p>
+      </article>
 
-        </div>
-      </div>
-    </section>
+    </div>
+  </div>
+</section>
+
 
     <!-- الخصوصية والأمان -->
     <section id="privacy-security" class="section privacy" aria-labelledby="privacy-title">
